@@ -1,4 +1,5 @@
 4.2 -> 4.2.1:
+	- fix: nested %if handling, optind initialization posix vs. glibc.
 
 4.1 -> 4.2:
 	- set cachesize without a dbenv, the default is far too small.
